--- a/app/views/lookbook/inspector/panels/_notes.html.erb
+++ b/app/views/lookbook/inspector/panels/_notes.html.erb
@@ -2,16 +2,16 @@
 <%= lookbook_inspector_panel(id: dom_id(@target, :notes_panel), padded: true) do %>
   <% if @target.scenarios_with_notes.any? %>
   <% @target.scenarios_with_notes do |scenario, notes| %>
-  <section style="padding-block: var(--sl-spacing-medium); <%= 'border-bottom: 1px solid var(--lookbook-divider-color);' unless scenario == @target.scenarios_with_notes.last %>">
+  <section style="padding-block: var(--lookbook-spacing-medium); <%= 'border-bottom: 1px solid var(--lookbook-divider-color);' unless scenario == @target.scenarios_with_notes.last %>">
     <% if @target.scenarios.many? %>
-      <h3 style="color: var(--sl-color-neutral-400); margin-bottom: var(--sl-spacing-small);"><%= scenario.label %></h3>
+      <h3 style="color: var(--lookbook-color-base-400); margin-bottom: var(--lookbook-spacing-small);"><%= scenario.label %></h3>
     <% end %>
     <%= lookbook_prose { notes } %>
   </section>
   <% end %>
   <% else %>
-  <section style="padding-block: var(--sl-spacing-medium);">
-    <em style="color: var(--sl-color-neutral-400);">No notes available.</em>
+  <section style="padding-block: var(--lookbook-spacing-medium);">
+    <em style="color: var(--lookbook-color-base-400);">No notes available.</em>
   </section>
   <% end %>
 <% end %>
