--- a/app/components/lookbook/ui/elements/viewport/viewport.css
+++ b/app/components/lookbook/ui/elements/viewport/viewport.css
@@ -17,25 +17,25 @@
   }
 
   .viewport-dimensions {
-    font-size: var(--sl-font-size-x-small);
-    font-family: var(--sl-font-mono);
-    padding-inline: var(--sl-spacing-x-small);
-    padding-block: var(--sl-spacing-x-small);
+    font-size: var(--lookbook-font-size-x-small);
+    font-family: var(--lookbook-font-mono);
+    padding-inline: var(--lookbook-spacing-x-small);
+    padding-block: var(--lookbook-spacing-x-small);
     position: absolute;
     z-index: 10;
     top: 0;
     right: 0;
     display: inline-flex;
-    gap: var(--sl-spacing-2x-small);
+    gap: var(--lookbook-spacing-2x-small);
     overflow: hidden;
-    border-bottom-left-radius: var(--sl-border-radius-medium);
+    border-bottom-left-radius: var(--lookbook-border-radius-medium);
     pointer-events: none;
 
     &::before {
       content: "";
       position: absolute;
       inset: 0;
-      background: var(--sl-color-neutral-200);
+      background: var(--lookbook-color-base-200);
       opacity: 0.7;
     }
 
@@ -57,7 +57,7 @@
 
   &.resize-x {
     .viewport-dimensions {
-      right: var(--sl-spacing-medium);
+      right: var(--lookbook-spacing-medium);
     }
 
     .viewport-resizer {
@@ -83,25 +83,25 @@
     align-items: center;
     justify-content: center;
     background-color: #fff;
-    color: var(--sl-color-neutral-500);
+    color: var(--lookbook-color-base-500);
   }
 
   .viewport-handle-x {
     flex-direction: row;
     border-left: 1px solid var(--lookbook-divider-color);
-    width: var(--sl-spacing-medium);
+    width: var(--lookbook-spacing-medium);
     cursor: ew-resize;
   }
 
   .viewport-handle-y {
     border-top: 1px solid var(--lookbook-divider-color);
-    height: var(--sl-spacing-medium);
+    height: var(--lookbook-spacing-medium);
     cursor: ns-resize;
   }
 
   .viewport-handle-xy {
-    width: var(--sl-spacing-medium);
-    height: var(--sl-spacing-medium);
+    width: var(--lookbook-spacing-medium);
+    height: var(--lookbook-spacing-medium);
     cursor: nwse-resize;
 
     sl-icon {
@@ -110,7 +110,7 @@
   }
 
   .viewport-handle-icon {
-    width: var(--sl-spacing-medium);
-    height: var(--sl-spacing-medium);
+    width: var(--lookbook-spacing-medium);
+    height: var(--lookbook-spacing-medium);
   }
 }
